<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="88dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:paddingVertical="8dp">

    <ImageView
        android:id="@+id/itemImg"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:contentDescription="@string/image_desease"
        android:background="@drawable/small_rectangle_green"
        android:src="@color/ic_launcher_background" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical"
        android:paddingStart="8dp"
        tools:ignore="RtlSymmetry">

        <TextView
            android:id="@+id/itemTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/title_item"
            android:textStyle="bold"
            android:fontFamily="@font/pregular"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/tv_item_ciri_ciri"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/deskription_item"
            android:textSize="14sp"
            android:fontFamily="@font/pregular"
            android:maxLines="2"
            android:ellipsize="end"
             />
    </LinearLayout>

    <ImageView
        android:id="@+id/itemMenu"
        android:layout_width="24dp"
        android:layout_height="24dp"
        android:src="@drawable/baseline_delete_forever_gray_24"
        android:contentDescription="@string/menu"
        android:layout_gravity="center"/>

</LinearLayout>