<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="40dp"
    tools:context=".ui.loginregis.SignUpActivity">

    <TextView
        android:id="@+id/tvtitle1asignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:text="@string/teks_signup_title1.a"
        android:textColor="@color/yellow"
        android:textSize="24sp"
        android:fontFamily="@font/psemibold"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvtitle1bsignup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="0dp"
        android:text="@string/teks_signup_title1.b"
        android:textSize="24sp"
        android:fontFamily="@font/psemibold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvtitle1asignup"
        />

    <TextView
        android:id="@+id/tvusername"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/teks_username"
        android:textSize="20sp"
        android:fontFamily="@font/pregular"
        app:layout_constraintTop_toBottomOf="@id/tvtitle1bsignup"
        app:layout_constraintStart_toStartOf="parent"
        />

    <EditText
        android:id="@+id/usernamefield"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:importantForAutofill="no"
        android:paddingHorizontal="16dp"
        android:hint="@string/teks_usernamefield"
        android:textColorHint="@color/hint_color"
        android:fontFamily="@font/pregular"
        android:textSize="16sp"
        android:background="@drawable/form_field"
        app:layout_constraintTop_toBottomOf="@id/tvusername"
        tools:ignore="TextFields" />

    <TextView
        android:id="@+id/tvemailaddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/teks_emailaddress"
        android:textSize="20sp"
        android:fontFamily="@font/pregular"
        app:layout_constraintTop_toBottomOf="@id/usernamefield"
        app:layout_constraintStart_toStartOf="parent"

        />

    <EditText
        android:id="@+id/emailaddressfield"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:paddingHorizontal="16dp"
        android:hint="@string/teks_emailaddressfield"
        android:textColorHint="@color/hint_color"
        android:fontFamily="@font/pregular"
        android:textSize="16sp"
        android:background="@drawable/form_field"
        app:layout_constraintTop_toBottomOf="@id/tvemailaddress"
        />

    <TextView
        android:id="@+id/tvpassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/teks_password"
        android:textSize="20sp"
        android:fontFamily="@font/pregular"
        app:layout_constraintTop_toBottomOf="@id/emailaddressfield"
        app:layout_constraintStart_toStartOf="parent"

        />

    <EditText
        android:id="@+id/passwordfield"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="8dp"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:paddingHorizontal="16dp"
        android:hint="@string/teks_passwordfield"
        android:textColorHint="@color/hint_color"
        android:fontFamily="@font/pregular"
        android:textSize="16sp"
        android:background="@drawable/form_field"
        android:drawableEnd="@drawable/ic_visibility_off_24"
        android:drawableTint="?attr/colorControlNormal"
        app:layout_constraintTop_toBottomOf="@id/tvpassword"
        />

    <Button
        android:id="@+id/btnsignup"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="24dp"
        android:text="@string/btn_teks_signup"
        android:textColor="@color/white"
        android:fontFamily="@font/psemibold"
        android:background="@drawable/big_button"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordfield"
        />

    <LinearLayout
        android:id="@+id/lineOr"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="24dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnsignup"
        >

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/dark_gray" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teks_or"
            android:textSize="12sp"
            android:fontFamily="@font/pregular"
            android:layout_marginHorizontal="8dp" />

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="@color/dark_gray" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/Signup_google"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/stroke_big_button_black"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lineOr"
        >

        <ImageView
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:contentDescription="@string/logo_google"
            android:src="@drawable/logo_google" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_teks_signupgoogle"
            android:fontFamily="@font/pregular"
            android:gravity="center"
            android:textSize="16sp"
            android:layout_marginStart="8dp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toBottomOf="@id/Signup_google"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <TextView
            android:id="@+id/tvhave_account"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/teks_haveaccount"
            android:fontFamily="@font/pregular"
            android:textSize="12sp"
             />

        <TextView
            android:id="@+id/tvsignin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_teks_tekssignin"
            android:fontFamily="@font/pregular"
            android:textColor="@color/green"
            android:textSize="12sp"
            android:layout_marginStart="4dp" />
    </LinearLayout>



</androidx.constraintlayout.widget.ConstraintLayout>