<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    
    <ImageView
        android:id="@+id/slideImg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:contentDescription="@string/ilustration_onboarding"
        android:src="@drawable/ilustration_onboarding1"
        android:adjustViewBounds="true"
        android:scaleType="fitXY"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/tvtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="78dp"
        android:text="@string/title_onboarding1"
        android:textSize="24sp"
        android:fontFamily="@font/psemibold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/slideImg"
        />

    <TextView
        android:id="@+id/tvdescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="20dp"
        android:text="@string/description_onboarding1"
        android:textSize="16sp"
        android:fontFamily="@font/pregular"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvtitle"
        />


</LinearLayout>