<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginHorizontal="20dp"
    android:layout_marginTop="32dp"
    tools:context=".ui.detailresultcalculator.DetailResultCalculatorActivity">

    <ImageView
        android:id="@+id/btn_back"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:contentDescription="@string/back_button"
        android:src="@drawable/ic_arrow_back_24"
        android:background="@drawable/big_button"
        android:padding="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <TextView
        android:id="@+id/tvtitledesease"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/desease_rice"
        android:fontFamily="@font/psemibold"
        android:textSize="16sp"
        android:layout_marginTop="30dp"
        app:layout_constraintTop_toBottomOf="@id/btn_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />


    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardcalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvtitledesease"
        android:background="@drawable/form_field"
        >

        <TextView
            android:id="@+id/tv_description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/calculator_description"
            android:fontFamily="@font/pregular"
            android:textSize="14sp"
            android:textStyle="italic"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"/>

        <EditText
            android:id="@+id/inputLuasLahan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="numberDecimal"
            android:layout_marginTop="8dp"
            android:hint="@string/input_land_area_ha"
            android:fontFamily="@font/pregular"
            android:backgroundTint="#4CAF50"
            android:textSize="14sp"
            app:layout_constraintTop_toBottomOf="@id/tv_description"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <Button
            android:id="@+id/btnCalculate"
            android:layout_width="match_parent"
            android:layout_height="57dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="24dp"
            android:text="@string/calculate"
            android:textColor="@color/white"
            android:fontFamily="@font/psemibold"
            android:background="@drawable/big_button"
            android:gravity="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/inputLuasLahan"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- Recommendation Section -->

    <ScrollView
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardcalculate">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/recommendationSection"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:visibility="gone"
            tools:visibility="visible">


            <TextView
                android:id="@+id/tvrecomendation"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:fontFamily="@font/psemibold"
                android:text="@string/recommendation"
                android:textSize="18sp"
                tools:ignore="MissingConstraints" />

            <TextView
                android:id="@+id/recommendationContent"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="Detail obat akan muncul di sini."
                android:textSize="16sp"
                app:layout_constraintStart_toStartOf="@+id/tvrecomendation"
                app:layout_constraintTop_toBottomOf="@+id/tvrecomendation" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>